--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "babel-polyfill": "~6.23.0",
     "formsy-material-ui": "~0.5.5",
     "formsy-react": "~0.18.0",
     "material-ui": "~0.16.6",
