--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
     "react-redux": "~5.0.2",
+    "react-redux-firebase": "^1.3.0-beta",
     "react-router": "~3.0.0",
+    "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "~2.0.1",
     "redux": "~3.6.0"
   },
