--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-polyfill": "~6.23.0",
     "formsy-material-ui": "~0.5.5",
     "formsy-react": "~0.18.0",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "~0.16.6",
     "moment": "~2.17.1",
     "react": "~15.4.1",
